# wikipedia_xml_parser.rs

./: .gitignore  Cargo.toml
src/: jason.rs  lib.rs  main.rs  page.rs  page_id.rs  page_parser.rs
