[package]
name = "Fast XML wikipedia parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
encoding = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.16.0"
threadpool = "1.0"
rayon = "1.5.3"
